--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,9 +46,7 @@ classifiers = [
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.setuptools]
-# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
-#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
-py-modules = ["mag_cal"]
+packages = ["mag_cal"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
